# halla_bot

./: .gitignore  README.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2024_09_28_1435-7fd906b02759_create_users_and_responses.py  2024_09_28_1538-5db00320dfe4_create_contexts.py  2024_10_05_1909-1bfd4be1a8ab_added_gender.py  2024_10_06_1243-d792e5b0837c_added_preffered_model.py
etc/: halla_bot.service
halla_bot/: __main__.py  cfg.py  const.py  database.py  db_models.py  handlers.py  models.py  utls.py
